--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "replicate": "^1.0.1",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
