--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "openai": "^5.5.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "pngjs": "^7.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -94,6 +95,7 @@
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/pngjs": "^6.0.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
